--- a/css/ww.css
+++ b/css/ww.css
@@ -1,4 +1,4 @@
-@import url('ww-blessed1.css?z=1376336912691');
+@import url('ww-blessed1.css?z=1376338968110');
 
 
 #ibm-com .ibm-graphic-tabs.ibm-combo-tabs div.ibm-tab-section.ibm-text .ibm-two-column ul.ibm-bullet-list li, #ibm-com .ibm-graphic-tabs.ibm-combo-tabs div.ibm-tab-section.ibm-text .ibm-three-column ul.ibm-bullet-list li { display: block; }
@@ -1836,6 +1836,8 @@ a.ibm-thumbnail-module h2, a.ibm-thumbnail-module h3 { color: #000; }
 .ibm-landing-page.ibm-banded #ibm-content .ibm-columns.ibm-thumbnail-small > div[class^="ibm-col-"]:nth-of-type(2n) { clear: right; }
 
 .ibm-thumbnail-module .ibm-sprite { overflow: hidden; }
+
+.dj_ie7 .ibm-thumbnail-module .ibm-sprite { position: relative; }
 
 .ibm-thumbnail-module .ibm-sprite img { position: relative; max-width: 100%; }
 
